refactor exception, refactor channels controller. add owner and created at fields to channels. Add rules for security config